[package]
name = "siiir_modular_power"
description = "A console app and library with function to quickly calculate k^n mod m."
version = "1.0.7"
edition = "2021"
repository = "https://github.com/Siiir/modular_power"
license = "GPL-3.0"
readme = "README.md"
categories = ["command-line-utilities", "mathematics"]
keywords = ["pow_mod", "modpow",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"